# k10

./: .clang_complete  .gitignore  Cargo.toml  TODO
.deprecated/: .gitignore
.deprecated/cc/: Server.cc  std.board
.deprecated/cc/include/Server/: GameCache.h
.deprecated/cc/scripts/: generate-game-logic
.deprecated/cc/src/: Forward.h  main.cc  test.cc
.deprecated/cc/src/Board/: Direction.cc  Direction.h  Graph.h  Graph_test.cc  Node.h  Parser.h  Parser_test.cc  Port.h  Port_test.cc  Store.cc
.deprecated/cc/src/Core/: Building.cc  Edge.cc  Resource_test.cc  Result.cc
.deprecated/cc/src/Game/: Dice.cc  Dice.h  ExecutionOptions.cc  Player.cc  Player.h  Trade.h  View.cc
.deprecated/cc/src/Game/BoardView/: Junction.cc  Junction.h  Node.h
.deprecated/cc/src/Game/IntegrationTests/: TripleBoard.cc
.deprecated/cc/src/Scenario/: Parameters.cc  Scenario.cc  Store.cc  Store.h
.deprecated/cc/src/Server/: Client.h  GameCache.h  GameCache_test.cc  Registrar.h  Registrar_test.cc  Request.cc  Response.cc  Response.h  Server.h
.deprecated/cc/src/Test/: Utils.h
.deprecated/cc/src/Util/: ByteBuffer.h  Decoder.h  Encoder.cc  Encoder.h  LRUCache_test.cc  ServerBase.cc  ServerBase.h  Types.h
.deprecated/cc/static/: Single.board
.deprecated/haskell/: Main.hs
db/scripts/: init
engine/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  main.cc  main.cpp  x.api
engine/ADT/: Assertions.h  DoublyLinkedList.h  Extras.h  HashFunctions.h  HashMap.h  HashTable.h  InlineLinkedList.h  Optional.h  Point.h  SinglyLinkedList.h  Vector.h
engine/Graph/: .clang_complete  Edge.cc  Graph.cc  Graph.h  Junction.h  Makefile  Node.cc  Node.h  board-generator.py  main.cc  test.cc
engine/Graph/Boards/: Standard.txt
engine/Test/: main.cc  main.cpp
engine/dev/: interface-plan.h
engine/include/: Board.h  Edge.h  Flags.h  Flippable.h  Graph.h  Hex.h  Junction.h  Node.h  Ocean.h  Road.h
engine/include/Board/: Base.h  BoardBase.h  Direction.h  Edge.h  Flippable.h  Graph.h  Hex.h  Junction.h  Node.h  NodeType.h  Ocean.h  Orientation.h  Parser.h  Port.h  Road.h
engine/include/Core/: Action.h  Building.h  DevelopmentCard.h  Edge.h  Random.h  Resource.h  Result.h  Vertex.h
engine/include/Game/: DevelopmentCard.h  Dice.h  ExecutionOptions.h  Flags.h  Game.h  Graph.h  Player.h  Resource.h  Robber.h  Trade.h
engine/include/Game/BoardView/: Hex.h  Junction.h  Node.h  Road.h
engine/include/Game/DevelopmentCards/: Base.h  Knight.h  Monopoly.h  RoadBuilding.h  VictoryPoint.h  YearOfPlenty.h
engine/include/Scenario/: Base.h  IterationType.h  Parameters.h  Scenario.h  Standard.h
engine/include/Server/: Interface.h  Registrar.h  Request.h  Response.h  Server.h
engine/include/Util/: ByteBuffer.h  Decoder.h  LRUCache.h  LinkedTrie.h  SerialStream.h  Serializable.h  ServerBase.h  Types.h
engine/scripts/: generate-boards  generate-game-logic
engine/src/: Forward.h  client.py  main.cc
engine/src/Board/: Base.cc  Direction.cc  Edge.cc  Graph.cc  Graph.h  Graph_test.cc  Junction.cc  Node.cc  NodeType.cc  Node_test.cc  Orientation.cc  Parser.cc  Parser.h  Port.cc  Store.cc  Store.h
engine/src/Board/Test/: Board.cc  Graph.cc  Node.cc  Parser.cc  Port.cc
engine/src/Core/: Action.cc  Action_test.cc  Building.cc  Building.h  DevelopmentCard.cc  DevelopmentCard.h  Edge.cc  Edge.h  Random.cc  Resource.cc  Resource.h  Result.cc  Vertex.cc  Vertex.h
engine/src/Core/Test/: Resource.cc
engine/src/Game/: Dice.cc  Dice.h  Game.cc  Game.h  Game_test.cc  Player.cc  Player.h  Store.cc  Store.h  Store_test.cc  Trade.cc  Trade.h  View.h
engine/src/Game/BoardView/: Hex.cc  Hex.h  Junction.cc  Junction.h  Node.cc  Node.h  Road.cc  Road.h
engine/src/Game/IntegrationTests/: Common.h  SingleBoard.cc  StandardBoard.cc  TripleBoard.cc
engine/src/Game/Test/: Game.cc
engine/src/Graph/: Edge.cc  Graph.cc  Node.cc
engine/src/Scenario/: Base.cc  Parameters.h  Scenario.cc  Scenario.h  Scenario_test.cc  Standard.cc  Store.cc  Store.h
engine/src/Scenario/Test/: Scenario.cc
engine/src/Server/: Client.cc  Client.h  GameCache.cc  GameCache.h  GameCache_test.cc  Registrar.cc  Registrar.h  Request.cc  Request.h  Request_test.cc  Response.cc  Response.h  Server.cc  Server.h
engine/src/Server/Test/: Registrar.cc  Request.cc
engine/src/Test/: Utils.h
engine/src/Util/: ByteBuffer.h  Decoder.cc  Decoder.h  Decoder_test.cc  DoublyLinkedList.h  Encoder.cc  Encoder.h  LRUCache.h  LRUCache_test.cc  LinkedTrie_test.cc  ServerBase.cc  ServerBase.h  ServerBase_test.cc
engine/src/Util/Test/: DoublyLinkedList.cc  LRUCache.cc  LinkedTrie.cc  SerialStream.cc  Serializer.cc  ServerBase.cc
engine/static/: game-graph.yml
engine/static/boards/: Portless.board  Standard.board  Tall.board  Triple.board
kclient/: Cargo.toml
kclient/src/: client.rs  handler.rs  main.rs  me.rs  rest.rs  state.rs
kcore/: Cargo.toml
kcore/src/: action.rs  game.rs  lib.rs  player.rs  trade.rs
kcore/src/board/: boards.rs  hex.rs  junction.rs  mod.rs  port.rs  road.rs
kserver/: Cargo.toml
kserver/src/: channel.rs  client.rs  error.rs  game.rs  game_view.rs  handler.rs  kapi.rs  lib.rs  main.rs  pending_game.rs  request.rs  server.rs  token.rs  user.rs  ws.rs
kserver/src/model/: game.rs  pending_game.rs
kserver/src/view/: game.rs  player.rs
src/: mod.rs
src/client/: client.rs  handler.rs  me.rs  mod.rs  rest.rs  state.rs
src/core/: action.rs  dev_card.rs  die.rs  game.rs  mod.rs  player.rs  resource.rs
src/core/board/: boards.rs  hex.rs  index.rs  mod.rs  road.rs
src/core/view/: game.rs  player.rs
src/server/: api.rs  engine.rs  error.rs  handler.rs  kapi.rs  mod.rs  result.rs  ws.rs
src/server/model/: game.rs  mod.rs  pending_game.rs  user.rs
src/server/view/: game.rs  player.rs
