[package]
name = "k10"
version = "0.1.0"
authors = ["Kevin Murphy <kevin@murp.us>"]
edition = "2018"

[dependencies]
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures = { version = "0.3", default-features = false }
rand = { version = ">= 0.8.3", features = ["small_rng"] }
reqwest = { version = ">= 0.11.4", features = ["json"] }
serde_json = ">= 1.0"
serde = { version = ">= 1.0", features = ["derive"] }
sqlx = { version = ">= 0.5", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = ">= 1.0"
tokio-stream = { version = ">= 0.1.3" }
tokio-tungstenite = ">= 0.15"
tokio = { version = ">= 1.0", features = ["io-std", "io-util", "macros", "sync"] }
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
warp = "0.3"

[lib]
name = "k10"
path = "src/lib.rs"

[[bin]]
name = "k10-server"
path = "src/server/bin/main.rs"

[[bin]]
name = "k10-client"
path = "src/client/bin/main.rs"
