[package]
name = "kclient"
version = "0.1.0"
authors = ["Kevin Murphy <keggsmurph21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
kcore = { path = "../kcore" }
kserver = { path = "../kserver" }
rand = { version = ">= 0.8.3", features = ["small_rng"] }
reqwest = { version = ">= 0.11.4", features = ["json"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
thiserror = ">= 1.0"
tokio = { version = ">= 1.0", features = ["io-std", "io-util", "macros", "sync"] }
tokio-stream = { version = ">= 0.1.3" }
tokio-tungstenite = ">= 0.15"
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
websocket = ">= 0.26.2"
