[package]
name = "kserver"
version = "0.1.0"
authors = ["Kevin Murphy <kevin@murp.us>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false }
kcore = { path = "../kcore" }
rand = { version = ">= 0.8.3", features = ["small_rng"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
sqlx = { version = ">= 0.5", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = ">= 1.0"
tokio = { version = ">= 1.0", features = ["macros", "sync"] }
tokio-stream = { version = ">= 0.1.3" }
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
warp = "0.3"
